--- a/Dealwheel/Base.lproj/Main.storyboard
+++ b/Dealwheel/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zbW-ez-sb4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1685.625" y="-652.81690140845069"/>
+            <point key="canvasLocation" x="384" y="-733"/>
         </scene>
         <!--Spinwheel View Controller-->
         <scene sceneID="d9P-6g-B0r">
@@ -111,21 +111,14 @@
                                     <constraint firstAttribute="height" constant="100" id="Wdk-U7-bqn"/>
                                 </constraints>
                             </view>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QPo-eK-FBP">
-                                <rect key="frame" x="76" y="467" width="167" height="40"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
-                                <state key="normal" title="spin the wheel!">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Evan L" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsi-qa-UlL">
-                                <rect key="frame" x="17" y="525" width="56.5" height="25"/>
+                                <rect key="frame" x="17" y="525" width="57" height="25"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500 points" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nb-uZ-nqP">
-                                <rect key="frame" x="209.5" y="525" width="94.5" height="25"/>
+                                <rect key="frame" x="209" y="525" width="95" height="25"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -139,8 +132,8 @@
                                     <constraint firstAttribute="height" constant="70" id="6jC-cD-SyG"/>
                                 </constraints>
                             </pickerView>
-                            <view contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KLy-Ls-B6r" customClass="SpinWheelControl" customModule="SpinWheelControl">
-                                <rect key="frame" x="44" y="206" width="232" height="232"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KLy-Ls-B6r" customClass="SpinWheelControl" customModule="SpinWheelControl">
+                                <rect key="frame" x="41" y="208" width="240" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
@@ -152,7 +145,6 @@
                             <constraint firstItem="G9G-AQ-FVM" firstAttribute="top" secondItem="Gce-no-STX" secondAttribute="bottom" id="4g1-qG-pt5"/>
                             <constraint firstItem="Otc-s5-teY" firstAttribute="top" secondItem="Lsi-qa-UlL" secondAttribute="bottom" constant="18" id="7vC-t5-QQg"/>
                             <constraint firstItem="4nb-uZ-nqP" firstAttribute="trailing" secondItem="381-Je-2LX" secondAttribute="trailingMargin" id="8Qe-l1-RHj"/>
-                            <constraint firstItem="QPo-eK-FBP" firstAttribute="top" secondItem="mSN-Oq-rfe" secondAttribute="bottom" constant="15" id="9rh-Ds-76C"/>
                             <constraint firstItem="Lsi-qa-UlL" firstAttribute="leading" secondItem="381-Je-2LX" secondAttribute="leadingMargin" constant="1" id="DUM-Wf-4ed"/>
                             <constraint firstAttribute="trailing" secondItem="KlW-KC-Hfo" secondAttribute="trailing" constant="11" id="GoM-AS-egx"/>
                             <constraint firstItem="mSN-Oq-rfe" firstAttribute="top" secondItem="G9G-AQ-FVM" secondAttribute="bottom" constant="8" id="Gua-VI-0TB"/>
@@ -161,16 +153,13 @@
                             <constraint firstAttribute="trailing" secondItem="mSN-Oq-rfe" secondAttribute="trailing" constant="11" id="QLV-Ve-lsy"/>
                             <constraint firstItem="IST-dJ-o6N" firstAttribute="top" secondItem="Gce-no-STX" secondAttribute="bottom" constant="15" id="VgI-N7-UCr"/>
                             <constraint firstItem="mSN-Oq-rfe" firstAttribute="leading" secondItem="381-Je-2LX" secondAttribute="leading" constant="11" id="XLO-mI-x1a"/>
-                            <constraint firstItem="QPo-eK-FBP" firstAttribute="centerX" secondItem="KlW-KC-Hfo" secondAttribute="centerX" id="aeq-jV-nKP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="iKh-fW-iRz" secondAttribute="trailing" constant="13" id="d7X-BD-Uvk"/>
                             <constraint firstItem="KlW-KC-Hfo" firstAttribute="top" secondItem="mSN-Oq-rfe" secondAttribute="bottom" constant="8" id="fMB-kl-fBt"/>
                             <constraint firstItem="iKh-fW-iRz" firstAttribute="top" secondItem="IST-dJ-o6N" secondAttribute="bottom" constant="12" id="kSQ-93-U0N"/>
                             <constraint firstItem="Lsi-qa-UlL" firstAttribute="baseline" secondItem="4nb-uZ-nqP" secondAttribute="baseline" id="oVf-cc-PrH"/>
-                            <constraint firstItem="QPo-eK-FBP" firstAttribute="leading" secondItem="381-Je-2LX" secondAttribute="leadingMargin" constant="60" id="ovg-aF-BAD"/>
                             <constraint firstItem="IST-dJ-o6N" firstAttribute="centerX" secondItem="G9G-AQ-FVM" secondAttribute="centerX" id="q1m-Ro-ft9"/>
                             <constraint firstItem="Otc-s5-teY" firstAttribute="top" secondItem="KlW-KC-Hfo" secondAttribute="bottom" constant="8" id="ttv-Gv-Npe"/>
                             <constraint firstItem="iKh-fW-iRz" firstAttribute="leading" secondItem="381-Je-2LX" secondAttribute="leadingMargin" constant="15" id="wmp-Fj-kkz"/>
-                            <constraint firstItem="Lsi-qa-UlL" firstAttribute="top" secondItem="QPo-eK-FBP" secondAttribute="bottom" constant="18" id="xbs-gC-TZi"/>
                             <constraint firstItem="KlW-KC-Hfo" firstAttribute="leading" secondItem="381-Je-2LX" secondAttribute="leading" constant="11" id="yT3-fN-isr"/>
                         </constraints>
                     </view>
@@ -179,7 +168,6 @@
                         <outlet property="centerView" destination="mSN-Oq-rfe" id="WlR-57-SeS"/>
                         <outlet property="pickerView" destination="iKh-fW-iRz" id="qrV-Iq-7Gy"/>
                         <outlet property="pointsLabel" destination="4nb-uZ-nqP" id="w9H-Yc-0oI"/>
-                        <outlet property="spinButton" destination="QPo-eK-FBP" id="rDw-0V-mB0"/>
                         <outlet property="spinWheelControl" destination="KLy-Ls-B6r" id="doI-dk-bik"/>
                         <outlet property="usernameLabel" destination="Lsi-qa-UlL" id="DDC-Th-2NQ"/>
                         <segue destination="evK-1W-l5e" kind="presentation" identifier="showLogin" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="Yag-I2-Y12"/>
